RESOLVED FIXED145040
JSC has misspelled function: "parseFunctionParamters" -> "parseFunctionParameters"
https://bugs.webkit.org/show_bug.cgi?id=145040
Summary JSC has misspelled function: "parseFunctionParamters" -> "parseFunctionParame...
Saam Barati
Reported 2015-05-14 23:28:40 PDT
https://bugs.webkit.org/show_bug.cgi?id=144954 introduced this misspelling. It's better to have the correct spelling.
Attachments
Patch (3.39 KB, patch)
2015-05-15 00:30 PDT, GSkachkov
no flags
GSkachkov
Comment 1 2015-05-15 00:30:16 PDT
GSkachkov
Comment 2 2015-05-15 00:33:33 PDT
Saam Barati Thanks! I've fixed
Mark Lam
Comment 3 2015-05-15 00:33:51 PDT
Comment on attachment 253181 [details] Patch r=me
WebKit Commit Bot
Comment 4 2015-05-15 02:23:48 PDT
Comment on attachment 253181 [details] Patch Clearing flags on attachment: 253181 Committed r184378: <http://trac.webkit.org/changeset/184378>
WebKit Commit Bot
Comment 5 2015-05-15 02:23:52 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.