Fix typo in function name parseFunctionParamters -> parseFunctionParameters https://bugs.webkit.org/show_bug.cgi?id=145040

Patch by Alexandr Skachkov <gskachkov@gmail.com> on 2015-05-15
Reviewed by Mark Lam.

* parser/Parser.h:
* parser/Parser.cpp:

Canonical link: https://commits.webkit.org/163077@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@184378 268f45cc-cd09-0410-ab3c-d52691b4dbfc